--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,6 @@ body {
   font-weight: 600 !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 5000px;
 }
 
 /* NavBar */
@@ -98,10 +97,6 @@ body {
   width: 50%;
 }
 
-* {
-  /* transition: 0s !important; */
-}
-
 @media (max-width: 768px) {
   .hero_image_box {
     display: none;
@@ -175,9 +170,11 @@ body {
   display: block;
   margin-bottom: 10px;
   font-weight: 700;
+  transition: .2s;
 }
 .buy_btn:hover {
   color: #fff;
+  background-color: #1692f8;
 }
 
 .buy_btn_box {
@@ -203,10 +200,6 @@ body {
 
 .price_box li {
   padding: 10px;
-}
-
-.MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium.css-1lrr7yx-MuiSvgIcon-root:hover {
-  
 }
 
 @media (max-width: 768px){
@@ -247,4 +240,214 @@ body {
 /* Trading */
 #trading {
   padding-top: 76px;
+  text-align: center;
+}
+#trading h1{
+  margin-bottom: 50px;
+}
+
+#trading ul{
+  text-align: right;
+}
+
+#trading ul li{
+  padding: 10px;
+}
+
+.trading_flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.trading_flex div {
+  width: 50%;
+}
+
+.laptop_img img {
+  max-width: 100%;
+}
+
+.xtb {
+  background-color: var(--main-color);
+  border-radius: 33px;
+  display: block;
+  height: 40px;
+  color: #fff;
+  transition: .2s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 22px;
+  font-weight: 700;
+  padding: 30px;
+}
+
+.xtb:hover {
+  background-color: #1692f8;
+  color: #fff;
+}
+
+@media (max-width: 768px){
+  .laptop_img {
+    display: none;
+  }
+
+  .trading_flex div {
+    width: 100%;
+}
+}
+
+/* Youtube */
+.MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium.css-1c3fzzs-MuiSvgIcon-root {
+  fill: #ff0000;
+}
+
+.youtube {
+  padding-top: 76px;
+}
+
+.youtube h1 {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.youtube h1 a {
+  color: #212529;
+}
+
+iframe {
+  border-radius: 15px;
+}
+
+.short_box {
+  display: flex;
+  overflow-x: auto;
+  gap: 10px;
+}
+
+.more {
+  position: relative;
+  width: 281px;
+  height: 500px;
+  background-color: transparent;
+}
+
+#myVideo {
+  position: absolute;
+  width: 281px;
+  object-fit: cover;
+  height: 500px;
+  display: block;
+  border-radius: 15px;
+}
+
+.more a{
+  position: absolute;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 281px;
+  height: 500px;
+  background-color: transparent;
+  color: #fff;
+  font-size: 26px;
+  background: rgba(0, 0, 0, 0.5);
+  transition: .2s;
+}
+
+.more a:hover {
+  background-color: transparent;
+}
+
+
+
+/* Social */
+
+section#contact {
+  padding-top: 76px;
+  margin-bottom: 40px;
+}
+
+#contact h1 {
+  font-size: 40px;
+  width: fit-content;
+  margin: 0 auto 50px;
+}
+
+#contact .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 40px;
+}
+
+#contact .box {
+  padding: 30px 15px;
+  text-align: center;
+  transition: .2s;
+  border: 1px solid #ddd;
+  box-shadow: 0 0 10px #ddd;
+  border-radius: 9px;
+  color: #b289fe;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#contact .box:hover {
+  box-shadow: none;
+}
+
+#contact .box .number {
+  display: block;
+  font-size: 50px;
+  font-weight: bold;
+  margin: 10px 0;
+  transition: .4s;
+}
+
+#contact .box .text {
+  color: var(--main-clr);
+  font-size: 20px;
+  font-weight: bold;
+  font-style: italic;
+}
+
+.email {
+  font-size: 23px !important;
+}
+
+@media (min-width: 992px) and (max-width: 1200px){
+  .email {
+    font-size: 22px !important;
+  }
+}
+
+/* Footer */
+.footer {
+  width: 100%;
+  background-color: #eee;
+  margin: 0 !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 99px;
+  flex-direction: column;
+}
+
+.footer p{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+
+}
+
+.footer span {
+  font-size: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
