--- a/src/index.css
+++ b/src/index.css
@@ -59,9 +59,8 @@ body {
   }
 }
 
+
 /* Hero */
-
-
 
 .hero {
   display: flex;
@@ -198,10 +197,11 @@ body {
   color: rgba(0, 0, 0, 0.55);;
 }
 
-.MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium.css-i4bv87-MuiSvgIcon-root {
+.MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium.css-i4bv87-MuiSvgIcon-root,
+.MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium.css-vubbuv {
   cursor: pointer;
-  width:20px;
-  height:20px;
+  width:18px;
+  height:18px;
 }
 
 .buy_btn_box h2 {
