--- a/src/index.css
+++ b/src/index.css
@@ -454,6 +454,7 @@ section#contact {
 
 #contact .box:hover {
   box-shadow: none;
+  color: #965efe;
 }
 
 #contact .box .number {
@@ -461,7 +462,7 @@ section#contact {
   font-size: 50px;
   font-weight: bold;
   margin: 10px 0;
-  transition: .4s;
+  /* transition: .4s; */
 }
 
 #contact .box .text {
