--- a/src/index.css
+++ b/src/index.css
@@ -131,6 +131,7 @@ body {
   padding-top: 76px;
   position: relative;
   margin-bottom: 150px;
+  
 }
 
 .course h5{
@@ -149,16 +150,92 @@ body {
   fill: #b188feb3;
 }
 
+.cont {
+  border-radius: 9px;
+  border: 1px solid #b188feb3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 40px 40px 0;
+}
+
+.course_containt_btn {
+  background-color: transparent;
+  color: #1692f8;
+  font-weight: 600;
+  padding: 20px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  gap: 12px;
+
+}
+
+.course_containt_btn:hover {
+  color: #0085f1;
+}
+
+.course_containt_btn svg{
+  width: 16px;
+}
+
+
+
+
+
+#hiden_vid {
+  overflow: hidden;
+  transition: .3s;
+  display: flex;
+  justify-content: center;
+
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 0%; 
+  margin-bottom: 0px;
+}
+
+.show_vid {
+  /* max-height: 355px !important; */
+  padding-bottom: 56.25% !important; 
+  
+  margin-bottom: 40px !important;
+}
+
+
+.ifrme_vid {
+  /* margin-bottom: 40px !important; */
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#chevron {
+  transition: .3s;
+  transform: rotate(0deg);
+}
+
+.show_chevron {
+  transform: rotate(180deg) !important;
+}
+
+
+
+
+
 .price_box {
   width: 100%;
   height: fit-content;
-  border: 1px solid #b188feb3;
-  padding: 40px;
+  /* padding: 40px; */
   padding-left: 0px;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  border-radius: 9px;
+  border-bottom: 1px solid #b188feb3;
 }
 
 .price_box div {
@@ -183,7 +260,7 @@ body {
 .buy_btn_box {
   border-left: 1px solid #b188feb3;
   border-right: 1px solid #b188feb3;
-  padding: 0 40px;
+  padding: 0 32px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -209,13 +286,17 @@ body {
 }
 
 .price_box li {
-  padding: 10px;
+  padding: 10px 0;
+}
+
+.g_two ul{
+  padding: 0 32px 0 0;
 }
 
 @media (max-width: 768px){
   .price_box {
     flex-direction: column !important;
-    padding: 40px;
+    /* padding: 40px; */
   }
   .price_box div {
     width: 100%;
@@ -224,7 +305,7 @@ body {
     border: none;
     order: 1;
     border-bottom: 1px solid #b188feb3;
-    padding-bottom: 20px;
+    padding: 0 0 26px;
   }
   .g_one {
     order: 3;
@@ -232,6 +313,10 @@ body {
 
   .g_two {
     order: 2;
+  }
+
+  .g_two ul {
+    padding: 0;
   }
   .course {
     margin-bottom: 75px;
